tests/some-site/monitoring/grafana/ingress.yaml
"apiVersion": "networking.k8s.io/v1"
"kind": "Ingress"
"metadata":
  "name": "grafana"
  "namespace": "monitoring"
"spec":
  "rules":
  - "host": "grafana.example.com"
    "http":
      "paths":
      - "backend":
          "service":
            "name": "grafana"
            "port":
              "number": 3000
        "path": "/"
        "pathType": "Prefix"
