tests/some-site/monitoring/grafana/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "labels":
    "app.kubernetes.io/component": "grafana"
    "app.kubernetes.io/name": "grafana"
    "app.kubernetes.io/version": "7.5.4"
  "name": "grafana"
  "namespace": "monitoring"
"spec":
  "ports":
  - "name": "http"
    "port": 3000
    "targetPort": "http"
  "selector":
    "app.kubernetes.io/component": "grafana"
    "app.kubernetes.io/name": "grafana"
